--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,5 +2,9 @@ version: '3.3'
 services:
     spacyapi:
         ports:
-            - '8080:80'
+            - '8081:80'
         image: 'jgontrum/spacyapi:en_v2'
+    # webapp:
+    #     build: ./app
+    #     ports: 
+    #         - '5000:5000'   
